--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 allprojects {
     repositories {
@@ -22,6 +23,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    greendao {
+        schemaVersion 1
+    }
 }
 
 dependencies {
@@ -39,4 +43,5 @@ dependencies {
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'be.appfoundry.progressbuttonlibrary:progressbutton:0.9.3'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'org.greenrobot:greendao:3.2.2'
 }
